--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
+/* Hero Section */
+
 body{
     margin: 0;
     padding: 0;
     color: white;
-    font-size: 18px;
+    font-size: 24px;
 }
 
 h1{
     font-size: 48px;
+    text-shadow: 1px 5px 10px rgba(50, 134, 101, 0.45),3px 10px 8px rgba(47, 95, 37, 0.62);
 }
 
 
@@ -18,6 +21,13 @@ h1{
 .container{
     width: 1400px;
     margin: 0 auto;
+}
+
+.logo{
+    margin: 0;
+    padding: 0px;
+    font-size: 24px;
+    color: #f9faf8;
 }
 
 nav{
@@ -38,18 +48,12 @@ a{
     color: antiquewhite;
 }
 
-.logo{
-    margin: 0;
-    padding: 0px;
-    font-size: 24px;
-    color: #f9faf8;
-}
 
 .main{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 250px;
+    margin-top: 200px;
     gap: 200px;
 }
 
@@ -70,4 +74,69 @@ button{
 
 button:active{
     box-shadow: none;
+}
+
+.main-word{
+    color: #47d19a;
+}
+
+.icon-box{
+  width: 50px;
+  margin: 100px auto;
+}
+.icon{
+    border: 3px solid  #47d19a;
+    border-radius: 1000px;
+    padding: 10px;
+    text-align: center;
+}
+
+/*End Hero Section */
+
+.information{
+    height: 100vh;
+    background-color: #f0dce6;
+    padding-top: 60px;
+}
+
+.information h2 {
+    color: #1F2937;
+    text-align: center;
+    margin-top: 0;
+    font-size: 65px;
+}
+
+.information-content{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 80px;
+    color: black;
+}
+
+.information-content > * {
+    border: 10px solid #20a761;
+    background-color: #d2e7ce;
+    border-radius: 20px;
+    width: 390px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    font-size: 24px;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 60px 40px -7px;;
+}
+
+.icon-information{
+    font-size: 150px;
+    text-align: center;
+}
+
+.ol-html{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 5px;
+    list-style: none;
+    padding: 0;
 }
