--- a/style.css
+++ b/style.css
@@ -93,12 +93,12 @@ button:active{
 }
 
 /*End Hero Section */
-/*End Information section*/
+/*Start Information section*/
 
 .information{
     height: 60vh;
-    background-color: #f0dce6;
-    padding-top: 10px;
+    background-color: #f5f5f5;
+    padding-top: 20px;
 }
 
 .information h2 {
@@ -113,16 +113,15 @@ button:active{
     justify-content: space-evenly;
     align-items: flex-start;
     flex-wrap: wrap;
-    margin-top: 50px;
+    margin-top: 90px;
     color: black;
 }
 
 .information-content > * {
-    border: 10px solid #1f2937;
-    background-color: #d2e7ce;
+    border: 10px solid #374a64;
+    background-color: #77c4ce;
     border-radius: 20px;
-    width: 290px;
-    height: 400px;
+    height: 300px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -130,12 +129,37 @@ button:active{
     font-size: 22px;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 60px 40px -7px;
     padding: 10px;
-    flex-basis: 350px;
+    flex-basis: 250px;
     flex-shrink: 0;
 }
 
 .icon-information{
-    font-size: 150px;
+    font-size: 100px;
     text-align: center;
 }
 /*End Information Section*/
+.quote{
+    background-color: #D8DBE0;
+    height: 40vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #1f2937;
+    font-weight: 300;
+    text-align: center;
+}
+
+.quote-box{
+    width: 1100px;
+}
+
+.quote-box address{
+    text-align: right;
+    margin-top: 30px;
+}
+
+.quote-content{
+    margin: 0;
+    font-size: 40px;
+}
+
