--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body{
 
 h1{
     font-size: 48px;
+    font-weight: 900;
+    color: #f9faf8;
     text-shadow: 1px 5px 10px rgba(50, 134, 101, 0.45),3px 10px 8px rgba(47, 95, 37, 0.62);
 }
 
@@ -102,14 +104,21 @@ button:active{
 .information{
     height: 60vh;
     background-color: #f5f5f5;
-    padding-top: 20px;
+    padding-top: 60px;
 }
 
 .information h2 {
     color: #1F2937;
     text-align: center;
     margin-top: 0;
-    font-size: 45px;
+    font-size: 36px;
+    font-weight: 900;
+}
+
+h4{
+    margin-top: 10px;
+    margin-bottom: 0px;
+    color: #257052;
 }
 
 .information-content{
@@ -125,7 +134,7 @@ button:active{
     border: 10px solid #374a64;
     background-color: #77c4ce;
     border-radius: 20px;
-    height: 300px;
+    height: 320px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -133,7 +142,7 @@ button:active{
     font-size: 22px;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 60px 40px -7px;
     padding: 10px;
-    flex-basis: 250px;
+    flex-basis: 280px;
     flex-shrink: 0;
 }
 
@@ -144,13 +153,14 @@ button:active{
 /*End Information Section*/
 .quote{
     background-color: #D8DBE0;
-    height: 40vh;
+    height: 50vh;
     display: flex;
     justify-content: center;
     align-items: center;
     color: #1f2937;
     font-weight: 300;
     text-align: center;
+    font-style: italic;
 }
 
 .quote-box{
@@ -174,7 +184,7 @@ button:active{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 40vh;
+    height: 50vh;
 }
 
 .cta-box{
@@ -217,7 +227,7 @@ input[type=email]{
 input[type=submit]{
     padding: 10px 30px;
     border-radius: 30px;
-    background-color: #77C4CE;
+    background-color: #3882f6;
     color: #eeeeee;
     border: none;
     box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
@@ -226,6 +236,7 @@ input[type=submit]{
     margin-left: 30px;
     letter-spacing: 2px;
     font-family: Agbalumo;
+    padding-top: 0px;
 }
 
 
