--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@ body {
   padding: 0;
   font-family: "Roboto", sans-serif;
 }
+/* navigation bar  */
+header {
+  background-color: #1f2937;
+  padding-left: 20px;
+  padding-right: 20px;
+}
 
 nav {
   display: flex;
@@ -15,10 +21,6 @@ nav {
   align-items: center;
   max-width: 1200px;
   margin: 0 auto;
-}
-
-.logo-container {
-  margin-left: 20px;
 }
 
 .logo-content {
@@ -32,7 +34,6 @@ nav {
   flex-wrap: nowrap;
   justify-content: space-between;
   align-items: center;
-  margin-right: 20px;
   gap: 20px;
 }
 
@@ -42,6 +43,59 @@ nav {
   font-size: 18px;
 }
 
-header {
+/* Navigation bar ends here */
+
+/* Hero section */
+
+.hero-container {
   background-color: #1f2937;
+  padding-left: 20px;
+  padding-right: 20px;
+  height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.hero-section {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+  width: 1200px;
+}
+
+.hero-content {
+  width: 50%;
+}
+
+.hero-main {
+  font-size: 48px;
+  font-weight: 900;
+  color: #f9faf8;
+  margin: 0;
+  max-width: 400px;
+}
+
+.hero-secondary {
+  font-size: 18px;
+  color: #e5e7eb;
+  margin-bottom: 20px;
+}
+
+.hero-btn {
+  background-color: #3882f6;
+  color: #f9faf8;
+  font-weight: 900;
+  padding: 10px 40px;
+  border: none;
+  border-radius: 10px;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.hero-img {
+  width: 50%;
+  background-color: grey;
+}
+
+/* Hero section ends here */
