--- a/style.css
+++ b/style.css
@@ -100,3 +100,42 @@ nav {
 }
 
 /* Hero section ends here */
+
+/* info section */
+.info-section {
+  height: 400px;
+}
+
+.info-title {
+  font-size: 36px;
+  font-weight: 900;
+  color: #1f2937;
+  text-align: center;
+  margin: 40px 0;
+}
+
+.info-container {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+}
+
+.info-boxes {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  flex-direction: column;
+  gap: 20px;
+  width: 180px;
+}
+
+.photo-box {
+  width: 180px;
+  height: 180px;
+  border: 5px solid #3882f6;
+  border-radius: 20px;
+}
+
+.info-content {
+  text-align: center;
+}
